agregando cambios version 2

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Twitter</h1>
     <form> 
-        <textarea id="textArea"></textarea><br><br>
-        <button type="button" id="calcular">Enviar</button>
+        <textarea id="textArea" placeholder="Publica..." required="required"></textarea><br><br>
+        <button type="submit" disabled="true" id="calcular">Enviar</button>
     </form> 
+    <p> # caracteres:</p>
+    <span id = "count"></span><br>
     <div id="resultado"></div>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script tycaracteres:pe="text/javascript" src="js/app.js"></script>
 </body>
-</html>
