--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Twitter</h1>
     <form> 
-        <textarea id="textArea" placeholder="Publica..." required="required"></textarea><br><br>
+        <textarea cols= "40" rows="4" id="textArea" class="myclass" placeholder=" Publica..." required="required"></textarea><br><br>
         <button type="submit" disabled="true" id="calcular">Enviar</button>
     </form> 
     <p> # caracteres:</p>
