--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     <p> # caracteres:</p>
     <span id = "count"></span><br>
     <div id="resultado"></div>
-  <script tycaracteres:pe="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
